``` fix(security): 修复SQL注入漏洞并增强Groovy脚本安全沙箱
- 在AnalysisService中添加股票代码格式校验，防止SQL注入攻击
- 为BacktestEngine的GroovyShell配置SecureASTCustomizer安全沙箱
- 限制脚本可使用的类和方法，仅允许白名单内类型的操作
- 为ScriptedFactorEngine添加相同的安全沙箱配置
- 将东方财富API的token和ut参数改为从环境变量读取
- 修复数据库连接配置，使用字典游标返回结果
```